# shadow-llm-evaluator

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: config.py  dependencies.py  logging_config.py  main.py
app/api/routes/: chat.py  metrics.py  test_ui.py
app/db/: client.py  models.py
app/db/repositories/: proxy_request_repository.py  shadow_evaluation_repository.py
app/db/services/: proxy_request_service.py  shadow_evaluation_service.py
app/evaluator/: __init__.py  action_comparator.py  json_validator.py
app/metrics/: metrics_service.py  metrics_store.py
app/middleware/: errors.py
app/proxy/: candidate_llm.py  errors.py  primary_llm.py  primary_proxy_service.py
app/queue/: shadow_queue.py
app/shadow/: shadow_service.py
app/static/test-ui/: index.html
app/types/: chat.py  evaluation.py  shadow_evaluation.py
deploy/digitalocean/: app.yaml
docs/: API.md  ARCHITECTURE.md  DATA.md  DEPLOYMENT.md  DESIGN.md
scripts/: find_working_model.py  list_do_models.py  smoke_chat.py
tests/: conftest.py
tests/integration/: test_chat_proxy.py  test_metrics.py  test_shadow_async.py  test_test_ui.py
tests/unit/: test_evaluator.py  test_postgres_url.py  test_primary_llm.py  test_primary_proxy_service.py  test_shadow_evaluation_service.py  test_shadow_service.py
worker/: main.py
